<resources>
    <string name="app_name">Psychiatry</string>

    <string name="shared_preference_key">shared_preference_key</string>

    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>


    <!-- activity_signup strings -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string-array name="user_type">
        <item>Patient</item>
        <item>Doctor</item>
    </string-array>


    <!-- profile fragment strings -->
    <string name="edi_profile">Edit Profile</string>
    <string name="scheduled">Scheduled</string>
    <string name="written_task_answers">Written tasks answers</string>
    <string name="logout">Logout</string>

    <!-- Home activity strings -->
    <string name="profile">Profile</string>
    <string name="articles">Articles</string>
    <string name="quizes">Quizes</string>


    <string name="hello_articles_fragment">Hello Articles fragment</string>
    <string name="hello_quizes_fragment">Hello Quizes fragment</string>
    <string name="hello_profile_fragment">Hello Profile fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
