<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.profile.ProfileFragment">
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        card_view:cardElevation="8dp"
        android:outlineSpotShadowColor="#000000">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/cover_image_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cover"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="#66000000"/>
            </FrameLayout>

            <ImageView
                android:id="@+id/change_cover_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|right"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/camera"/>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/transparent"
                android:layout_marginBottom="8dp">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image_cirlce_image_view"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/profile"
                        app:civ_border_width="2dp"
                        android:scaleType="centerCrop"
                        app:civ_border_color="#FF000000"/>
                    <ImageView
                        android:id="@+id/change_profile_image_image_view"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="bottom|right"
                        android:src="@drawable/camera"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/user_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Ahmed Aboelela"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/email_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Madstorm20@gmail.com"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="12sp"/>
            </LinearLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        android:layout_marginRight="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/edit_user"/>
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_weight="1"
                    android:text="@string/edi_profile"/>
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/arrow"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/schedule"/>
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_weight="1"
                    android:text="@string/scheduled"/>
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/arrow"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/written"/>
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_weight="1"
                    android:text="@string/written_task_answers"/>
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/arrow"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/logout"/>
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_weight="1"
                    android:text="@string/logout"/>
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/arrow"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>